; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mjpegenc.c_record_block.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_mjpegenc.c_record_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32*, %struct.TYPE_4__, i32* }
%struct.TYPE_4__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, i32*, i32)* @record_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @record_block(%struct.TYPE_5__* %0, i32* %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 3
  %18 = load i32*, i32** %17, align 8
  store i32* %18, i32** %15, align 8
  %19 = load i32, i32* %6, align 4
  %20 = icmp sle i32 %19, 3
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  br label %26

22:                                               ; preds = %3
  %23 = load i32, i32* %6, align 4
  %24 = and i32 %23, 1
  %25 = add nsw i32 %24, 1
  br label %26

26:                                               ; preds = %22, %21
  %27 = phi i32 [ 0, %21 ], [ %25, %22 ]
  store i32 %27, i32* %10, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp sle i32 %28, 3
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i32 0, i32 1
  store i32 %31, i32* %9, align 4
  %32 = load i32*, i32** %5, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = load i32, i32* %33, align 4
  store i32 %34, i32* %11, align 4
  %35 = load i32, i32* %11, align 4
  %36 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  %39 = load i32, i32* %10, align 4
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %38, i64 %40
  %42 = load i32, i32* %41, align 4
  %43 = sub nsw i32 %35, %42
  store i32 %43, i32* %13, align 4
  %44 = load i32*, i32** %15, align 8
  %45 = load i32, i32* %9, align 4
  %46 = load i32, i32* %13, align 4
  %47 = call i32 @ff_mjpeg_encode_coef(i32* %44, i32 %45, i32 %46, i32 0)
  %48 = load i32, i32* %11, align 4
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = load i32*, i32** %50, align 8
  %52 = load i32, i32* %10, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %51, i64 %53
  store i32 %48, i32* %54, align 4
  store i32 0, i32* %14, align 4
  %55 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %56 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %55, i32 0, i32 1
  %57 = load i32*, i32** %56, align 8
  %58 = load i32, i32* %6, align 4
  %59 = sext i32 %58 to i64
  %60 = getelementptr inbounds i32, i32* %57, i64 %59
  %61 = load i32, i32* %60, align 4
  store i32 %61, i32* %12, align 4
  %62 = load i32, i32* %9, align 4
  %63 = or i32 %62, 2
  store i32 %63, i32* %9, align 4
  store i32 1, i32* %7, align 4
  br label %64

64:                                               ; preds = %104, %26
  %65 = load i32, i32* %7, align 4
  %66 = load i32, i32* %12, align 4
  %67 = icmp sle i32 %65, %66
  br i1 %67, label %68, label %107

68:                                               ; preds = %64
  %69 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %69, i32 0, i32 2
  %71 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %70, i32 0, i32 0
  %72 = load i32*, i32** %71, align 8
  %73 = load i32, i32* %7, align 4
  %74 = sext i32 %73 to i64
  %75 = getelementptr inbounds i32, i32* %72, i64 %74
  %76 = load i32, i32* %75, align 4
  store i32 %76, i32* %8, align 4
  %77 = load i32*, i32** %5, align 8
  %78 = load i32, i32* %8, align 4
  %79 = sext i32 %78 to i64
  %80 = getelementptr inbounds i32, i32* %77, i64 %79
  %81 = load i32, i32* %80, align 4
  store i32 %81, i32* %13, align 4
  %82 = load i32, i32* %13, align 4
  %83 = icmp eq i32 %82, 0
  br i1 %83, label %84, label %87

84:                                               ; preds = %68
  %85 = load i32, i32* %14, align 4
  %86 = add nsw i32 %85, 1
  store i32 %86, i32* %14, align 4
  br label %103

87:                                               ; preds = %68
  br label %88

88:                                               ; preds = %91, %87
  %89 = load i32, i32* %14, align 4
  %90 = icmp sge i32 %89, 16
  br i1 %90, label %91, label %97

91:                                               ; preds = %88
  %92 = load i32*, i32** %15, align 8
  %93 = load i32, i32* %9, align 4
  %94 = call i32 @ff_mjpeg_encode_code(i32* %92, i32 %93, i32 240)
  %95 = load i32, i32* %14, align 4
  %96 = sub nsw i32 %95, 16
  store i32 %96, i32* %14, align 4
  br label %88

97:                                               ; preds = %88
  %98 = load i32*, i32** %15, align 8
  %99 = load i32, i32* %9, align 4
  %100 = load i32, i32* %13, align 4
  %101 = load i32, i32* %14, align 4
  %102 = call i32 @ff_mjpeg_encode_coef(i32* %98, i32 %99, i32 %100, i32 %101)
  store i32 0, i32* %14, align 4
  br label %103

103:                                              ; preds = %97, %84
  br label %104

104:                                              ; preds = %103
  %105 = load i32, i32* %7, align 4
  %106 = add nsw i32 %105, 1
  store i32 %106, i32* %7, align 4
  br label %64

107:                                              ; preds = %64
  %108 = load i32, i32* %12, align 4
  %109 = icmp slt i32 %108, 63
  br i1 %109, label %113, label %110

110:                                              ; preds = %107
  %111 = load i32, i32* %14, align 4
  %112 = icmp ne i32 %111, 0
  br i1 %112, label %113, label %117

113:                                              ; preds = %110, %107
  %114 = load i32*, i32** %15, align 8
  %115 = load i32, i32* %9, align 4
  %116 = call i32 @ff_mjpeg_encode_code(i32* %114, i32 %115, i32 0)
  br label %117

117:                                              ; preds = %113, %110
  ret void
}

declare dso_local i32 @ff_mjpeg_encode_coef(i32*, i32, i32, i32) #1

declare dso_local i32 @ff_mjpeg_encode_code(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
